Change background color of cliff nepal

--- a/works/the-cliff-nepal.html
+++ b/works/the-cliff-nepal.html
@@ -24,11 +24,11 @@
                     </div>
                     <div class="ml-6">
                         <div class="flex space-x-4 text-white">
-                            <a href="../work" class="px-3 py-2 text-base font-light uppercase tracking-widest hover:text-[#578200]">Work</a>
-                            <a href="../about" class="px-3 py-2 text-base font-light uppercase tracking-widest hover:text-[#578200]">About</a>
-                            <a href="../#services" class="px-3 py-2 text-base font-light uppercase tracking-widest hover:text-[#578200]">Services</a>
-                            <a href="https://medium.com/@milanmdhr" target="_blank" class="px-3 py-2 text-base font-light uppercase tracking-widest hover:text-[#578200]">Blog</a>
-                            <a href="../contact" class="px-3 py-2 text-base font-light uppercase tracking-widest hover:text-[#578200]">Let's Talk</a>
+                            <a href="../work" class="px-3 py-2 text-base font-light uppercase tracking-widest hover:text-primary">Work</a>
+                            <a href="../about" class="px-3 py-2 text-base font-light uppercase tracking-widest hover:text-primary">About</a>
+                            <a href="../#services" class="px-3 py-2 text-base font-light uppercase tracking-widest hover:text-primary">Services</a>
+                            <a href="https://medium.com/@milanmdhr" target="_blank" class="px-3 py-2 text-base font-light uppercase tracking-widest hover:text-primary">Blog</a>
+                            <a href="../contact" class="px-3 py-2 text-base font-light uppercase tracking-widest hover:text-primary">Let's Talk</a>
                         </div>
                     </div>
                     <div>
@@ -67,7 +67,7 @@
         <!--Main Content-->
         <main>
             <!--Hero-->
-            <div class="home-hero relative rounded-b-3xl bg-[#96C833] bg-center bg-no-repeat px-4 pt-32 lg:rounded-b-[80px]">
+            <div class="home-hero relative rounded-b-3xl bg-[#135500] bg-center bg-no-repeat px-4 pt-32 lg:rounded-b-[80px]">
                 <!--Caption-->
                 <div class="caption mx-auto flex h-full max-w-7xl flex-col items-center justify-center pt-20 text-center text-white">
                     <h1 class="mb-16 text-3xl font-bold md:text-5xl xl:text-8xl">The Cliff Nepal</h1>
@@ -149,7 +149,7 @@
             <div class="mx-auto max-w-7xl px-4">
                 <p class="mb-4 uppercase tracking-widest">02. Research</p>
                 <h1 class="mb-4 text-4xl lg:text-6xl">Research & Discovery</h1>
-                <p class="text-gray mb-12">The "Research & Discovery" process involved a comprehensive exploration of The Cliff Nepal's brand identity, market dynamics, and user preferences. Through in-depth interviews, market analysis, and user surveys, we gained valuable insights into the client's core values, unique offerings, and long-term goals. Analyzing competitor websites helped identify industry trends and opportunities for differentiation, while user feedback provided crucial insights into pain points and preferences. This thorough research formed the foundation for strategic decision-making throughout the project, guiding the design process to create a website that resonates with the target audience, effectively communicates the brand's unique selling points, and ultimately drives business growth for The Cliff Nepal.</p>
+                <p class="mb-12 text-gray">The "Research & Discovery" process involved a comprehensive exploration of The Cliff Nepal's brand identity, market dynamics, and user preferences. Through in-depth interviews, market analysis, and user surveys, we gained valuable insights into the client's core values, unique offerings, and long-term goals. Analyzing competitor websites helped identify industry trends and opportunities for differentiation, while user feedback provided crucial insights into pain points and preferences. This thorough research formed the foundation for strategic decision-making throughout the project, guiding the design process to create a website that resonates with the target audience, effectively communicates the brand's unique selling points, and ultimately drives business growth for The Cliff Nepal.</p>
 
                 <div class="mb-10 grid grid-cols-1 justify-between gap-2 md:grid-cols-12 md:gap-8">
                     <div class="md:col-span-4">
@@ -203,7 +203,7 @@
                     <div class="rounded-xl bg-zinc-800 p-5 md:p-8">
                         <img src="../assets/images/icon-mobile-green.svg" alt="" class="mb-4 w-10" />
                         <h3 class="mb-2 text-2xl lg:text-3xl">Mobile Usability Issues</h3>
-                        <p class="text-gray">Mobile users encountered significant usability issues on the previous website, including slow loading times, unresponsive elements, and poor readability. With the increasing prevalence of mobile devices for browsing and booking travel experiences, addressing mobile usability emerged as a priority. </p>
+                        <p class="text-gray">Mobile users encountered significant usability issues on the previous website, including slow loading times, unresponsive elements, and poor readability. With the increasing prevalence of mobile devices for browsing and booking travel experiences, addressing mobile usability emerged as a priority.</p>
                     </div>
 
                     <div class="rounded-xl bg-zinc-800 p-5 md:p-8">
@@ -224,8 +224,8 @@
                             </div>
                         </div>
 
-                        <p class="text-gray mb-3"><span class="font-medium uppercase tracking-wider text-primary">GOALS:</span> Emma loves thrilling adventures during her vacations and wants clear info to plan them easily.</p>
-                        <p class="text-gray mb-3"><span class="font-medium uppercase tracking-wider text-primary">FRUSTRATIONS:</span> Confusing websites with unclear navigation and booking processes.</p>
+                        <p class="mb-3 text-gray"><span class="font-medium uppercase tracking-wider text-primary">GOALS:</span> Emma loves thrilling adventures during her vacations and wants clear info to plan them easily.</p>
+                        <p class="mb-3 text-gray"><span class="font-medium uppercase tracking-wider text-primary">FRUSTRATIONS:</span> Confusing websites with unclear navigation and booking processes.</p>
                         <p class="text-gray"><span class="font-medium uppercase tracking-wider text-primary">NEEDS:</span> Emma needs a user-friendly website with easy booking and clear activity details.</p>
                     </div>
 
@@ -238,8 +238,8 @@
                             </div>
                         </div>
 
-                        <p class="text-gray mb-3"><span class="font-medium uppercase tracking-wider text-primary">GOALS:</span> John wants a safe and fun family vacation with clear safety info.</p>
-                        <p class="text-gray mb-3"><span class="font-medium uppercase tracking-wider text-primary">FRUSTRATIONS:</span> Websites lacking safety details and are hard to use on mobile.</p>
+                        <p class="mb-3 text-gray"><span class="font-medium uppercase tracking-wider text-primary">GOALS:</span> John wants a safe and fun family vacation with clear safety info.</p>
+                        <p class="mb-3 text-gray"><span class="font-medium uppercase tracking-wider text-primary">FRUSTRATIONS:</span> Websites lacking safety details and are hard to use on mobile.</p>
                         <p class="text-gray"><span class="font-medium uppercase tracking-wider text-primary">NEEDS:</span> John needs a website with clear safety measures and mobile-friendly booking for stress-free planning.</p>
                     </div>
                 </div>
@@ -250,7 +250,7 @@
             <div class="mx-auto max-w-7xl px-4">
                 <p class="mb-4 uppercase tracking-widest">03. Design Process</p>
                 <h1 class="mb-4 text-4xl lg:text-6xl">Wireframes</h1>
-                <p class="text-gray mb-12">I created low-fidelity wireframes to outline the basic structure and layout of the website, focusing on key pages such as the homepage, activity details, and booking process.</p>
+                <p class="mb-12 text-gray">I created low-fidelity wireframes to outline the basic structure and layout of the website, focusing on key pages such as the homepage, activity details, and booking process.</p>
             </div>
         </div>
 
@@ -260,7 +260,7 @@
         <div class="py-16 lg:py-32">
             <div class="mx-auto max-w-7xl px-4">
                 <h1 class="mb-4 text-4xl lg:text-6xl">Global Design System</h1>
-                <p class="text-gray mb-12">The Global Design System for The Cliff Nepal's website served as a cohesive framework to ensure consistency and coherence across all design elements. This system encompassed various components such as typography, color palette, and visual elements, which collectively contributed to the overall look and feel of the website.</p>
+                <p class="mb-12 text-gray">The Global Design System for The Cliff Nepal's website served as a cohesive framework to ensure consistency and coherence across all design elements. This system encompassed various components such as typography, color palette, and visual elements, which collectively contributed to the overall look and feel of the website.</p>
                 <div class="grid grid-cols-1 justify-between gap-16 md:grid-cols-12">
                     <div class="md:col-span-8">
                         <h3 class="mb-3 text-2xl lg:text-3xl">Typography & Components</h3>
@@ -283,7 +283,7 @@
         <div class="bg-[#EBF2EC] py-16 lg:py-32">
             <div class="mx-auto max-w-5xl px-4 text-center">
                 <h1 class="mb-4 text-4xl lg:text-6xl">Visual Design</h1>
-                <p class="text-gray mb-12">The visual design of The Cliff Nepal's website aimed to create an engaging and immersive experience that reflects the thrilling adventure and stunning beauty of the destination. This was achieved through a thoughtful blend of high-quality imagery, a cohesive color palette, intuitive layout, and compelling visual elements.</p>
+                <p class="mb-12 text-gray">The visual design of The Cliff Nepal's website aimed to create an engaging and immersive experience that reflects the thrilling adventure and stunning beauty of the destination. This was achieved through a thoughtful blend of high-quality imagery, a cohesive color palette, intuitive layout, and compelling visual elements.</p>
             </div>
             <div class="mb-16 px-[10%] text-center">
                 <img src="../assets/images/cliff-responsive.png" class="w-full" alt="" />
@@ -329,7 +329,7 @@
             <div class="mx-auto max-w-7xl px-4">
                 <p class="mb-4 uppercase tracking-widest">04. Conclusion</p>
                 <h1 class="mb-4 text-4xl lg:text-6xl">Key Learnings</h1>
-                <p class="text-gray mb-12">My journey through this project provided some valuable insights.</p>
+                <p class="mb-12 text-gray">My journey through this project provided some valuable insights.</p>
                 <div class="grid grid-cols-1 gap-8 md:grid-cols-2">
                     <div class="rounded-xl bg-zinc-800 p-5 md:p-8">
                         <img src="../assets/images/icon-user-green.png" alt="" class="mb-4 w-10" />
