--- a/works/amooma.html
+++ b/works/amooma.html
@@ -12,6 +12,17 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.6.0/css/glide.core.min.css" integrity="sha512-tYKqO78H3mRRCHa75fms1gBvGlANz0JxjN6fVrMBvWL+vOOy200npwJ69OBl9XEsTu3yVUvZNrdWFIIrIf8FLg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.2.0/css/glide.theme.min.css" integrity="sha512-wCwx+DYp8LDIaTem/rpXubV/C1WiNRsEVqoztV0NZm8tiTvsUeSlA/Uz02VTGSiqfzAHD4RnqVoevMcRZgYEcQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="../assets/css/style.css" />
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZXPJQHYWHZ"></script>
+        <script>
+            window.dataLayer = window.dataLayer || []
+            function gtag() {
+                dataLayer.push(arguments)
+            }
+            gtag('js', new Date())
+
+            gtag('config', 'G-ZXPJQHYWHZ')
+        </script>
     </head>
 
     <body x-data="{ navbarOpen: false, scrolledFromTop:false }" :class="{'overflow-hidden': navbarOpen, 'overflow-auto': !navbarOpen }" class="lg:overflow-auto">
@@ -148,7 +159,7 @@
             <div class="mx-auto max-w-7xl px-4">
                 <p class="mb-4 uppercase tracking-widest">02. Research</p>
                 <h1 class="mb-4 text-4xl lg:text-6xl">Research & Discovery</h1>
-                <p class="text-gray mb-12">The Research & Discovery phase for the Amooma website redesign was crucial in understanding the needs and behaviors of the target audience, identifying pain points in the current site, and laying the groundwork for an effective redesign. This phase involved several key activities, including user research, competitor analysis, and data analysis, each contributing to a comprehensive understanding of the project requirements and opportunities for improvement.</p>
+                <p class="mb-12 text-gray">The Research & Discovery phase for the Amooma website redesign was crucial in understanding the needs and behaviors of the target audience, identifying pain points in the current site, and laying the groundwork for an effective redesign. This phase involved several key activities, including user research, competitor analysis, and data analysis, each contributing to a comprehensive understanding of the project requirements and opportunities for improvement.</p>
 
                 <div class="mb-10 grid grid-cols-1 justify-between gap-2 md:grid-cols-12 md:gap-8">
                     <div class="md:col-span-4">
@@ -223,8 +234,8 @@
                             </div>
                         </div>
 
-                        <p class="text-gray mb-3"><span class="font-medium uppercase tracking-wider text-primary">GOALS:</span> Find a luxurious and relaxing spa treatment for a weekend.</p>
-                        <p class="text-gray mb-3"><span class="font-medium uppercase tracking-wider text-primary">FRUSTRATIONS:</span> Difficulty in navigating the website and booking a service.</p>
+                        <p class="mb-3 text-gray"><span class="font-medium uppercase tracking-wider text-primary">GOALS:</span> Find a luxurious and relaxing spa treatment for a weekend.</p>
+                        <p class="mb-3 text-gray"><span class="font-medium uppercase tracking-wider text-primary">FRUSTRATIONS:</span> Difficulty in navigating the website and booking a service.</p>
                         <p class="text-gray"><span class="font-medium uppercase tracking-wider text-primary">NEEDS:</span> An easy-to-use booking system, clear service descriptions, and mobile-friendly design.</p>
                     </div>
 
@@ -237,8 +248,8 @@
                             </div>
                         </div>
 
-                        <p class="text-gray mb-3"><span class="font-medium uppercase tracking-wider text-primary">GOALS:</span> Purchase a gift card for a friend and explore wellness packages.</p>
-                        <p class="text-gray mb-3"><span class="font-medium uppercase tracking-wider text-primary">FRUSTRATIONS:</span> Unclear gift card purchasing process and lack of detailed package information.</p>
+                        <p class="mb-3 text-gray"><span class="font-medium uppercase tracking-wider text-primary">GOALS:</span> Purchase a gift card for a friend and explore wellness packages.</p>
+                        <p class="mb-3 text-gray"><span class="font-medium uppercase tracking-wider text-primary">FRUSTRATIONS:</span> Unclear gift card purchasing process and lack of detailed package information.</p>
                         <p class="text-gray"><span class="font-medium uppercase tracking-wider text-primary">NEEDS:</span> Simplified gift card purchase flow, detailed descriptions of wellness packages, and visible customer reviews.</p>
                     </div>
                 </div>
@@ -249,8 +260,8 @@
             <div class="mx-auto max-w-7xl px-4">
                 <p class="mb-4 uppercase tracking-widest">03. Design Process</p>
                 <h1 class="mb-4 text-4xl lg:text-6xl">Wireframes</h1>
-                <p class="text-gray mb-3">The design process began with creating initial sketches and low-fidelity wireframes to outline the basic structure and layout of the website. These wireframes focused on the fundamental aspects of the user interface, such as navigation, content organization, and primary interactions.</p>
-                <p class="text-gray mb-12">Emphasis was placed on simplifying navigation, ensuring clear information hierarchy, and creating an intuitive flow from landing on the homepage to making a booking or finding specific information.</p>
+                <p class="mb-3 text-gray">The design process began with creating initial sketches and low-fidelity wireframes to outline the basic structure and layout of the website. These wireframes focused on the fundamental aspects of the user interface, such as navigation, content organization, and primary interactions.</p>
+                <p class="mb-12 text-gray">Emphasis was placed on simplifying navigation, ensuring clear information hierarchy, and creating an intuitive flow from landing on the homepage to making a booking or finding specific information.</p>
             </div>
         </div>
 
@@ -280,8 +291,8 @@
         <div class="bg-[#DEE7EE] py-16 lg:py-32">
             <div class="mx-auto max-w-5xl px-4 text-center">
                 <h1 class="mb-4 text-4xl lg:text-6xl">Visual Design</h1>
-                <p class="text-gray mb-3">The visual design focused on creating a luxurious and tranquil aesthetic that reflected AMOOMA’s brand values. High-quality images, soothing color palettes, and elegant typography were used to convey a sense of calm and well-being.</p>
-                <p class="text-gray mb-12">The design ensured that every visual element aligned with AMOOMA's holistic wellness approach, creating a cohesive and immersive brand experience.</p>
+                <p class="mb-3 text-gray">The visual design focused on creating a luxurious and tranquil aesthetic that reflected AMOOMA’s brand values. High-quality images, soothing color palettes, and elegant typography were used to convey a sense of calm and well-being.</p>
+                <p class="mb-12 text-gray">The design ensured that every visual element aligned with AMOOMA's holistic wellness approach, creating a cohesive and immersive brand experience.</p>
             </div>
             <div class="mb-16 px-[10%] text-center">
                 <img src="../assets/images/amooma-responsive.png" class="w-full" alt="" />
@@ -321,7 +332,7 @@
             <div class="mx-auto max-w-7xl px-4">
                 <p class="mb-4 uppercase tracking-widest">04. Conclusion</p>
                 <h1 class="mb-4 text-4xl lg:text-6xl">Key Learnings</h1>
-                <p class="text-gray mb-12">My journey through this project provided several key insights.</p>
+                <p class="mb-12 text-gray">My journey through this project provided several key insights.</p>
                 <div class="grid grid-cols-1 gap-8 md:grid-cols-2">
                     <div class="rounded-xl bg-zinc-800 p-5 md:p-8">
                         <img src="../assets/images/icon-check.svg" alt="" class="mb-4 w-10" />
