--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
         <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.6.0/css/glide.core.min.css" integrity="sha512-tYKqO78H3mRRCHa75fms1gBvGlANz0JxjN6fVrMBvWL+vOOy200npwJ69OBl9XEsTu3yVUvZNrdWFIIrIf8FLg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="assets/css/style.css" />
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZXPJQHYWHZ"></script>
+        <script>
+            window.dataLayer = window.dataLayer || []
+            function gtag() {
+                dataLayer.push(arguments)
+            }
+            gtag('js', new Date())
+
+            gtag('config', 'G-ZXPJQHYWHZ')
+        </script>
     </head>
 
     <body x-data="{ navbarOpen: false, scrolledFromTop:false }" :class="{'overflow-hidden': navbarOpen, 'overflow-auto': !navbarOpen }" class="lg:overflow-auto">
@@ -424,7 +435,7 @@
                         <div class="glide__track" data-glide-el="track">
                             <ul class="glide__slides">
                                 <li class="glide__slide">
-                                    <div class="relative flex flex-col rounded-lg border border-gray-300 px-8 py-10">
+                                    <div class="border-gray-300 relative flex flex-col rounded-lg border px-8 py-10">
                                         <div class="mb-4">
                                             <img src="assets/images/quotes.svg" alt="" class="mb-4" />
                                             <p>Fantastic and brilliant service. Highly recommend Milan!</p>
@@ -436,7 +447,7 @@
                                     </div>
                                 </li>
                                 <li class="glide__slide">
-                                    <div class="relative flex flex-col rounded-lg border border-gray-300 px-8 py-10">
+                                    <div class="border-gray-300 relative flex flex-col rounded-lg border px-8 py-10">
                                         <div class="mb-4">
                                             <img src="assets/images/quotes.svg" alt="" class="mb-4" />
                                             <p>Collaborating with Milan on multiple projects has been an absolute pleasure. His incredible design talent and technical know-how have made a huge difference in our projects. Milan goes above and beyond to make sure everything aligns perfectly with our vision, making every step of the process smooth and enjoyable. He's not just a brilliant designer; he's a great team player who genuinely makes our work better.</p>
@@ -448,7 +459,7 @@
                                     </div>
                                 </li>
                                 <li class="glide__slide">
-                                    <div class="relative flex flex-col rounded-lg border border-gray-300 px-8 py-10">
+                                    <div class="border-gray-300 relative flex flex-col rounded-lg border px-8 py-10">
                                         <div class="mb-4">
                                             <img src="assets/images/quotes.svg" alt="" class="mb-4" />
                                             <p>Incredible logo! Milan nailed our brand identity with a design that's both visually stunning and memorable. Highly recommended!</p>
@@ -460,7 +471,7 @@
                                     </div>
                                 </li>
                                 <li class="glide__slide">
-                                    <div class="relative flex flex-col rounded-lg border border-gray-300 px-8 py-10">
+                                    <div class="border-gray-300 relative flex flex-col rounded-lg border px-8 py-10">
                                         <div class="mb-4">
                                             <img src="assets/images/quotes.svg" alt="" class="mb-4" />
                                             <p>Love our new website! Milan nailed the modern, user-friendly design perfectly. Seamless collaboration and improved online presence. Highly recommended!</p>
