--- a/work.html
+++ b/work.html
@@ -11,6 +11,17 @@
         <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.6.0/css/glide.core.min.css" integrity="sha512-tYKqO78H3mRRCHa75fms1gBvGlANz0JxjN6fVrMBvWL+vOOy200npwJ69OBl9XEsTu3yVUvZNrdWFIIrIf8FLg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="assets/css/style.css" />
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZXPJQHYWHZ"></script>
+        <script>
+            window.dataLayer = window.dataLayer || []
+            function gtag() {
+                dataLayer.push(arguments)
+            }
+            gtag('js', new Date())
+
+            gtag('config', 'G-ZXPJQHYWHZ')
+        </script>
     </head>
 
     <body x-data="{ navbarOpen: false, scrolledFromTop:false }" :class="{'overflow-hidden': navbarOpen, 'overflow-auto': !navbarOpen }" class="lg:overflow-auto">
@@ -145,7 +156,7 @@
                     </div>
 
                     <!--Sinder-->
-                    <div class="portfolio group relative rounded-3xl bg-zinc-800 pl-8 pt-6 transition duration-500 ease-in-out hover:bg-gray-50">
+                    <div class="portfolio hover:bg-gray-50 group relative rounded-3xl bg-zinc-800 pl-8 pt-6 transition duration-500 ease-in-out">
                         <div class="overflow-hidden rounded-br-3xl">
                             <div class="pr-4 text-right text-white group-hover:text-dark lg:pr-8">
                                 <p class="mb-3 inline-block w-auto rounded-full border border-white px-4 py-1 text-xs uppercase tracking-widest group-hover:border-dark">Agency: Clickagee</p>
@@ -702,7 +713,7 @@
                         <div class="glide__track" data-glide-el="track">
                             <ul class="glide__slides">
                                 <li class="glide__slide">
-                                    <div class="relative flex flex-col rounded-lg border border-gray-300 px-8 py-10">
+                                    <div class="border-gray-300 relative flex flex-col rounded-lg border px-8 py-10">
                                         <div class="mb-4">
                                             <img src="assets/images/quotes.svg" alt="" class="mb-4" />
                                             <p>Fantastic and brilliant service. Highly recommend Milan!</p>
@@ -714,7 +725,7 @@
                                     </div>
                                 </li>
                                 <li class="glide__slide">
-                                    <div class="relative flex flex-col rounded-lg border border-gray-300 px-8 py-10">
+                                    <div class="border-gray-300 relative flex flex-col rounded-lg border px-8 py-10">
                                         <div class="mb-4">
                                             <img src="assets/images/quotes.svg" alt="" class="mb-4" />
                                             <p>Creativity and professionalism at its best! Milan exceeded expectations in designing our product. The website and app received accolades, positively impacting user engagement. Highly recommended for top-notch design solutions.</p>
@@ -726,7 +737,7 @@
                                     </div>
                                 </li>
                                 <li class="glide__slide">
-                                    <div class="relative flex flex-col rounded-lg border border-gray-300 px-8 py-10">
+                                    <div class="border-gray-300 relative flex flex-col rounded-lg border px-8 py-10">
                                         <div class="mb-4">
                                             <img src="assets/images/quotes.svg" alt="" class="mb-4" />
                                             <p>Incredible logo! Milan nailed our brand identity with a design that's both visually stunning and memorable. Highly recommended!</p>
@@ -738,7 +749,7 @@
                                     </div>
                                 </li>
                                 <li class="glide__slide">
-                                    <div class="relative flex flex-col rounded-lg border border-gray-300 px-8 py-10">
+                                    <div class="border-gray-300 relative flex flex-col rounded-lg border px-8 py-10">
                                         <div class="mb-4">
                                             <img src="assets/images/quotes.svg" alt="" class="mb-4" />
                                             <p>Love our new website! Milan nailed the modern, user-friendly design perfectly. Seamless collaboration and improved online presence. Highly recommended!</p>
