Changed hover bg of Sinder

--- a/work.html
+++ b/work.html
@@ -156,7 +156,7 @@
                     </div>
 
                     <!--Sinder-->
-                    <div class="portfolio hover:bg-gray-50 group relative rounded-3xl bg-zinc-800 pl-8 pt-6 transition duration-500 ease-in-out">
+                    <div class="portfolio group relative rounded-3xl bg-zinc-800 pl-8 pt-6 transition duration-500 ease-in-out hover:bg-slate-50">
                         <div class="overflow-hidden rounded-br-3xl">
                             <div class="pr-4 text-right text-white group-hover:text-dark lg:pr-8">
                                 <p class="mb-3 inline-block w-auto rounded-full border border-white px-4 py-1 text-xs uppercase tracking-widest group-hover:border-dark">Agency: Clickagee</p>
