Add Hydro case study

--- a/work.html
+++ b/work.html
@@ -123,6 +123,22 @@
                         </div>
                     </div>
 
+                    <!--Hydro Steam Northwest-->
+                    <div class="portfolio group relative rounded-3xl bg-zinc-800 pl-8 pt-6 transition duration-500 ease-in-out hover:bg-[#DCF0FA]">
+                        <div class="overflow-hidden rounded-br-3xl">
+                            <div class="pr-4 text-right text-white group-hover:text-dark lg:pr-8">
+                                <p class="mb-3 inline-block w-auto rounded-full border border-white px-4 py-1 text-xs uppercase tracking-widest group-hover:border-dark">Agency: Clickagee</p>
+                                <p class="uppercase">UI/UX/WEB DESIGN &bull; 2019</p>
+                                <h3 class="mb-4 text-3xl">Hydro Steam Northwest</h3>
+                            </div>
+                            <img src="assets/images/hydrosteam-web.png" alt="" class="translate-x-3 transform rounded-br-3xl rounded-tl-lg duration-300 ease-in-out group-hover:translate-x-0" />
+                        </div>
+                        <a href="works/hydro-steam-nw" target="_blank" class="absolute inset-0 z-10"><div class="sr-only">open case study</div></a>
+                        <div class="view-project absolute -right-8 bottom-12 z-20 animate-spin-slow mix-blend-difference transition-all duration-300 ease-in-out">
+                            <img src="assets/images/view-project-white.svg" alt="" />
+                        </div>
+                    </div>
+
                     <!--Insellerate-->
                     <div class="portfolio group relative rounded-3xl bg-zinc-800 pl-8 pt-6 transition duration-500 ease-in-out hover:bg-blue-100">
                         <div class="overflow-hidden rounded-br-3xl">
@@ -182,22 +198,6 @@
                             <img src="assets/images/sourcetaggers-web.png" alt="" class="translate-x-3 transform rounded-br-3xl rounded-tl-lg duration-300 ease-in-out group-hover:translate-x-0" />
                         </div>
                         <a href="https://sourcetaggers.com/" target="_blank" class="absolute inset-0 z-10"><div class="sr-only">open case study</div></a>
-                        <div class="view-project absolute -right-8 bottom-12 z-20 animate-spin-slow mix-blend-difference transition-all duration-300 ease-in-out">
-                            <img src="assets/images/view-project-white.svg" alt="" />
-                        </div>
-                    </div>
-
-                    <!--Hydro Steam Northwest-->
-                    <div class="portfolio group relative rounded-3xl bg-zinc-800 pl-8 pt-6 transition duration-500 ease-in-out hover:bg-[#DCF0FA]">
-                        <div class="overflow-hidden rounded-br-3xl">
-                            <div class="pr-4 text-right text-white group-hover:text-dark lg:pr-8">
-                                <p class="mb-3 inline-block w-auto rounded-full border border-white px-4 py-1 text-xs uppercase tracking-widest group-hover:border-dark">Agency: Clickagee</p>
-                                <p class="uppercase">UI/UX/WEB DESIGN &bull; 2019</p>
-                                <h3 class="mb-4 text-3xl">Hydro Steam Northwest</h3>
-                            </div>
-                            <img src="assets/images/hydrosteam-web.png" alt="" class="translate-x-3 transform rounded-br-3xl rounded-tl-lg duration-300 ease-in-out group-hover:translate-x-0" />
-                        </div>
-                        <a href="https://hydrosteamnw.com/" target="_blank" class="absolute inset-0 z-10"><div class="sr-only">open case study</div></a>
                         <div class="view-project absolute -right-8 bottom-12 z-20 animate-spin-slow mix-blend-difference transition-all duration-300 ease-in-out">
                             <img src="assets/images/view-project-white.svg" alt="" />
                         </div>
