--- a/works/amooma.html
+++ b/works/amooma.html
@@ -82,7 +82,7 @@
                 <!--Caption-->
                 <div class="caption mx-auto flex h-full max-w-7xl flex-col items-center justify-center pt-20 text-center text-white">
                     <h1 class="mb-16 text-3xl font-bold md:text-5xl xl:text-8xl">Amooma</h1>
-                    <img src="../assets/images/amooma-web.jpg" alt="" />
+                    <img src="../assets/images/amooma-web.jpg" alt="" class="rounded-t-lg" />
                 </div>
             </div>
         </main>
