Remove blank page

--- a/work.html
+++ b/work.html
@@ -133,7 +133,7 @@
                             </div>
                             <img src="assets/images/hydrosteam-web.png" alt="" class="translate-x-3 transform rounded-br-3xl rounded-tl-lg duration-300 ease-in-out group-hover:translate-x-0" />
                         </div>
-                        <a href="works/hydro-steam-nw" target="_blank" class="absolute inset-0 z-10"><div class="sr-only">open case study</div></a>
+                        <a href="works/hydro-steam-nw" target="" class="absolute inset-0 z-10"><div class="sr-only">open case study</div></a>
                         <div class="view-project absolute -right-8 bottom-12 z-20 animate-spin-slow mix-blend-difference transition-all duration-300 ease-in-out">
                             <img src="assets/images/view-project-white.svg" alt="" />
                         </div>
