--- a/works/the-cliff-nepal.html
+++ b/works/the-cliff-nepal.html
@@ -133,7 +133,7 @@
         </div>
 
         <!--Banner 1-->
-        <div class="h-screen bg-[url('../images/cliff-banner-1.png')] bg-cover bg-fixed bg-center bg-no-repeat"></div>
+        <div class="h-screen bg-[url('../images/cliff-banner-1.png')] bg-cover bg-scroll bg-center bg-no-repeat md:bg-fixed"></div>
 
         <!--How it started-->
         <div class="py-16 lg:py-32">
