Background fixed in mobile

--- a/works/amooma.html
+++ b/works/amooma.html
@@ -132,7 +132,7 @@
         </div>
 
         <!--Banner 1-->
-        <div class="h-screen bg-[url('../images/amooma-banner1.png')] bg-cover bg-fixed bg-center bg-no-repeat"></div>
+        <div class="h-screen bg-[url('../images/amooma-banner1.png')] bg-cover bg-scroll bg-center bg-no-repeat md:bg-fixed"></div>
 
         <!--How it started-->
         <div class="py-16 lg:py-32">
