Add Aja Dynasty Case Study

--- a/index.html
+++ b/index.html
@@ -210,6 +210,22 @@
             <div class="mx-auto max-w-7xl px-4 text-center">
                 <h1 class="mb-4 text-center text-4xl text-white lg:mb-10 lg:text-6xl">Showcase of Selected Projects</h1>
                 <div class="grid grid-cols-1 gap-y-8 text-left lg:mt-16 lg:grid-cols-2 lg:gap-x-12 lg:gap-y-12">
+                    <!--Aja Dynasty-->
+                    <div class="portfolio group relative rounded-3xl bg-zinc-800 pl-8 pt-6 transition duration-500 ease-in-out hover:bg-[#E5E3D6]">
+                        <div class="overflow-hidden rounded-br-3xl">
+                            <div class="pr-4 text-right text-white group-hover:text-dark lg:pr-8">
+                                <p class="mb-3 inline-block w-auto rounded-full border border-white px-4 py-1 text-xs uppercase tracking-widest group-hover:border-dark">Agency: Source Taggers</p>
+                                <p class="uppercase">UI/UX/WEB DESIGN &bull; 2024</p>
+                                <h3 class="mb-4 text-3xl">Aja Dynasty</h3>
+                            </div>
+                            <img src="assets/images/aja-web.png" alt="" class="translate-x-3 transform rounded-br-3xl rounded-tl-lg duration-300 ease-in-out group-hover:translate-x-0" />
+                        </div>
+                        <a href="works/aja-dynasty" class="absolute inset-0 z-10"><div class="sr-only">open case study</div></a>
+                        <div class="view-project absolute -right-8 bottom-12 z-20 animate-spin-slow mix-blend-difference transition-all duration-300 ease-in-out">
+                            <img src="assets/images/view-project-white.svg" alt="" />
+                        </div>
+                    </div>
+
                     <div class="portfolio group relative rounded-3xl bg-zinc-800 pl-8 pt-6 hover:bg-cyan-50">
                         <div class="overflow-hidden rounded-br-3xl">
                             <div class="pr-4 text-right text-white group-hover:text-dark lg:pr-8">
@@ -254,7 +270,7 @@
                             <img src="assets/images/view-project-white.svg" alt="" />
                         </div>
                     </div>
-
+                    <!-- 
                     <div class="portfolio group relative rounded-3xl bg-zinc-800 pl-8 pt-6 hover:bg-orange-50">
                         <div class="overflow-hidden rounded-br-3xl">
                             <div class="pr-4 text-right text-white group-hover:text-dark lg:pr-8">
@@ -269,7 +285,7 @@
                             <img src="assets/images/view-project-white.svg" alt="" />
                         </div>
                     </div>
-                    <!-- <div class="portfolio relative rounded-3xl">
+                    <div class="portfolio relative rounded-3xl">
                         <a href="#" class="group relative block h-full w-full overflow-hidden rounded-3xl before:content-[''] hover:before:opacity-100">
                             <div class="absolute z-10 max-w-80 pl-8 pt-8 text-dark">
                                 <p class="mb-3 rounded-full border border-dark px-4 py-1 text-sm uppercase tracking-widest group-hover:border-white group-hover:text-white">Agency: Source Taggers</p>
