Wireframe of Aja Dynasty

--- a/works/aja-dynasty.html
+++ b/works/aja-dynasty.html
@@ -274,7 +274,7 @@
             </div>
         </div>
 
-        <!-- <img src="../assets/images/hydro-wireframe.png" alt="" class="w-full" /> -->
+        <img src="../assets/images/aja-wireframe.png" alt="" class="w-full" />
 
         <!-- <div class="mx-auto max-w-7xl px-4"><hr /></div> -->
         <div class="py-16 lg:py-32">
